--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <img id="profilepic" src="images/profilepic.jpeg" alt="Novia's profile picture">
       <h3>Hello.</h3>
       <p id="pitch">I am a curious student who is fascinated by the intricacy of the human Nervous System
-        and the efficiency of the Artificial Inellegence in approaching that system.
+        and the efficiency of the Artificial Inellegence in approaching that system. I'm currently exloring
+        Web Design with UX/UI Research.
       </p>
     </div>
     <hr>
@@ -64,6 +65,7 @@
   <div class="bottomContainer">
     <a class="link" href="https://www.linkedin.com/in/xiaodan-novia-wu-b537551a3/">LinkedIn</a>
     <a href="#">Website</a>
+    <a href="#">Photography</a>
     <p class="copyright">© 2020 Novia Wu.</p>
   </div>
 
