--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img id="profilepic" src="images/profilepic.jpeg" alt="Novia's profile picture">
       <h3>Hello.</h3>
       <p id="pitch">I am a curious student who is fascinated by the intricacy of the human Nervous System
-        and the efficiency of the Artificial Inellegence in approaching that system. I'm currently exloring
+        and the efficiency of the Artificial Inellegence in approaching that system. I'm currently exploring
         Web Design with UX/UI Research.
       </p>
     </div>
