--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <a class="link" href="https://www.linkedin.com/in/xiaodan-novia-wu-b537551a3/">LinkedIn</a>
     <a href="#">Website</a>
     <a href="#">Photography</a>
+    <a href="https://noviawu.github.io/TinGod/">TinDog Project</a>
     <p class="copyright">© 2020 Novia Wu.</p>
   </div>
 
