--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="bottomContainer">
     <a class="link" href="https://www.linkedin.com/in/xiaodan-novia-wu-b537551a3/">LinkedIn</a>
     <a href="#">Website</a>
-    <a href="#">Photography</a>
+    <a href="photography.html">Photography</a>
     <a href="https://noviawu.github.io/TinGod/">TinDog Project</a>
     <p class="copyright">© 2020 Novia Wu.</p>
   </div>
