--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
   <div class="bottomContainer">
     <a class="link" href="https://www.linkedin.com/in/xiaodan-novia-wu-b537551a3/">LinkedIn</a>
+    <a href="https://github.com/noviawu">GitHub</a>
     <a href="#">Website</a>
     <a href="photography.html">Photography</a>
     <a href="https://noviawu.github.io/TinGod/">TinDog Project</a>
