--- a/photography.html
+++ b/photography.html
@@ -32,90 +32,90 @@
   <section id="album">
     <div class="row">
       <div class="col-lg-4 album-item">
-        <img src="images/photography/a.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/a.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
       <div class="col-lg-4 album-item">
-        <img src="images/photography/b.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/b.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
       <div class="col-lg-4 album-item">
-        <img src="images/photography/c.png" class="img-fluid rounded mx-auto" alt="Responsive image">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 album-item">
-        <img src="images/photography/d.png" class="img-fluid rounded mx-auto" alt="Responsive image">
-      </div>
-      <div class="col-lg-4 album-item">
-        <img src="images/photography/e.png" class="img-fluid rounded mx-auto" alt="Responsive image">
-      </div>
-      <div class="col-lg-4 album-item">
-        <img src="images/photography/f.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/c.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
     </div>
     <div class="row">
       <div class="col-lg-4 album-item">
-        <img src="images/photography/g.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/d.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
       <div class="col-lg-4 album-item">
-        <img src="images/photography/h.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/e.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
       <div class="col-lg-4 album-item">
-        <img src="images/photography/i.png" class="img-fluid rounded mx-auto" alt="Responsive image">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 album-item">
-        <img src="images/photography/j.png" class="img-fluid rounded mx-auto" alt="Responsive image">
-      </div>
-      <div class="col-lg-4 album-item">
-        <img src="images/photography/k.png" class="img-fluid rounded mx-auto" alt="Responsive image">
-      </div>
-      <div class="col-lg-4 album-item">
-        <img src="images/photography/l.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/f.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
     </div>
     <div class="row">
       <div class="col-lg-4 album-item">
-        <img src="images/photography/p.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/g.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
       <div class="col-lg-4 album-item">
-        <img src="images/photography/q.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/h.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
       <div class="col-lg-4 album-item">
-        <img src="images/photography/r.png" class="img-fluid rounded mx-auto" alt="Responsive image">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 album-item">
-        <img src="images/photography/m.png" class="img-fluid rounded mx-auto" alt="Responsive image">
-      </div>
-      <div class="col-lg-4 album-item">
-        <img src="images/photography/n.png" class="img-fluid rounded mx-auto" alt="Responsive image">
-      </div>
-      <div class="col-lg-4 album-item">
-        <img src="images/photography/o.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/i.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
     </div>
     <div class="row">
       <div class="col-lg-4 album-item">
-        <img src="images/photography/v.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/j.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
       <div class="col-lg-4 album-item">
-        <img src="images/photography/w.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/k.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
       <div class="col-lg-4 album-item">
-        <img src="images/photography/x.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/l.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
     </div>
     <div class="row">
       <div class="col-lg-4 album-item">
-        <img src="images/photography/s.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/p.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
       <div class="col-lg-4 album-item">
-        <img src="images/photography/t.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/q.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
       <div class="col-lg-4 album-item">
-        <img src="images/photography/u.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+        <img src="images/images/photography/r.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 album-item">
+        <img src="images/images/photography/m.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+      </div>
+      <div class="col-lg-4 album-item">
+        <img src="images/images/photography/n.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+      </div>
+      <div class="col-lg-4 album-item">
+        <img src="images/images/photography/o.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 album-item">
+        <img src="images/images/photography/v.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+      </div>
+      <div class="col-lg-4 album-item">
+        <img src="images/images/photography/w.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+      </div>
+      <div class="col-lg-4 album-item">
+        <img src="images/images/photography/x.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 album-item">
+        <img src="images/images/photography/s.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+      </div>
+      <div class="col-lg-4 album-item">
+        <img src="images/images/photography/t.png" class="img-fluid rounded mx-auto" alt="Responsive image">
+      </div>
+      <div class="col-lg-4 album-item">
+        <img src="images/images/photography/u.png" class="img-fluid rounded mx-auto" alt="Responsive image">
       </div>
     </div>
   </section>
