--- a/photography.html
+++ b/photography.html
@@ -130,6 +130,7 @@
   <!-- bottom -->
   <div class="bottomContainer">
     <a class="link" href="https://www.linkedin.com/in/xiaodan-novia-wu-b537551a3/">LinkedIn</a>
+    <a href="https://github.com/noviawu">GitHub</a>
     <a href="https://noviawu.github.io/My-Personal-Site/">Website</a>
     <a href="#">Photography</a>
     <a href="https://noviawu.github.io/TinGod/">TinDog Project</a>
